apps/base/whisper-asr-webservice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whisper-asr-webservice-ingress
  namespace: whisper-asr-webservice
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
      - whisper.henrylabs.eu.org
    secretName: whisper-asr-webservice-tls
  rules:
  - host: whisper.henrylabs.eu.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whisper-asr-webservice-service
            port:
              number: 80
